--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "mui-datatables": "^4.2.2",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.7"
   },
   "devDependencies": {
+    "@types/mui-datatables": "^3.7.9",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
